<resources>
    <string name="app_name">HackathonProject</string>
    <string name="button_call_rough_map">Rough Map</string>
    <string name="button_call_sat_info">Satellites Information</string>
    <string name="button_call_accurate_map">Co-GeoLocation</string>
    <string name="title_activity_rough_location">Map</string>
    <string name="satellite_info_title">Satellite In View:</string>
    <string name="reference_list_title">Choose a reference:</string>
    <string name="location_listener">GPS Location Listener:</string>
    <string name="latitude">Latitude:</string>
    <string name="longitude">Longitude:</string>
    <string name="accuracy">Accuracy:</string>
    <string name="provider">Provider:</string>
    <string name="see_on_map">See My Location On The Map</string>
    <string name="first_fix">Time to First Fix:</string>
    <string name="sat_count">Number of satellites:</string>
    <string name="to_sat_list">Satellites in List View</string>
    <string name="gnss_measurement_status">GNSS Measurement Status:</string>
    <string name="nav_msg_status">GNSS Navigation Message Status:</string>
    <string name="sentence1">Yes! My Location is VERY ACCURATE, I want to help:</string>
    <string name="broadcast_my_location">Broadcast My Location</string>
    <string name="sentence2">Oh No! I need better accuracy, help me correct it!</string>
    <string name="get_corrections">Get Corrections</string>
    <string name="item">Click Satellite to See Details</string>
    <string name="title_activity_login">Sign in</string>
    <string name="see_my_geofriend">See My Geo-friend</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
</resources>
